<resources>
    <string name="app_name">MyTodoList</string>
    <string name="map_key" translatable="false">AIzaSyAX390dB4hm11bZQpi-StujtcERETX772s</string>
    <string name="title_page">My To Do List</string>
    <string name="create">The Task</string>
    <string name="edit">Edit Task</string>
    <string name="subtitle_page">Dont Forget Me :)</string>
    <string name="end_page">No More Does</string>
    <string name="set">TA</string>
    <string name="des">Tugas Akhir</string>
    <string name="dat">Tomorrow</string>
    <string name="description">Description</string>
    <string name="title">Add Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="target">Timeline</string>
    <string name="edtitle">What You Wanna Do ?</string>
    <string name="eddesc">How Do You Do That ?</string>
    <string name="edtarget">When You Will Finish It ?</string>
    <string name="btsave">Save</string>
    <string name="btupd">Update</string>
    <string name="btdel">Delete</string>
    <string name="btcanc">Cancel</string>
    <string name="btlogin">SIGN IN</string>
    <string name="btregister">SIGN UP</string>
    <string name="rotate">ROTATE</string>
    <string name="grey">GREYSCALE</string>
    <string name="bright">BRIGHTNESS</string>
    <string name="checkbox">com.reggisam.mtl.login.checkbox</string>
    <string name="cbEmail">com.reggisam.mtl.login.email</string>
    <string name="cbPassword">com.reggisam.mtl.login.password</string>
</resources>
