<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_layout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/bg_item"
    android:layout_marginBottom="18dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_marginTop="19dp"
            android:textSize="22sp"
            android:textColor="#000C5D"
            android:text="@string/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="25"/>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="#ADADAD"
            android:text="@string/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="25"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="8dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/dat"
            android:textColor="#F63EA5"
            android:textSize="18sp"
            android:maxLength="25"/>
    </LinearLayout>
</LinearLayout>