<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_page"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/subtitle_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/subtitle_page"
                    android:textAlignment="center"
                    android:textColor="#857D7D"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/fab_add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="18dp"
                android:text="+"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="38sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#131E69" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_list_request"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-32dp"
        android:layout_marginRight="16dp">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/endpage"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:text="@string/end_page"
        android:textColor="#9A9A9A"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>